fix doc tour for admin
