# storage/api-docs/api-docs.json
@@ -1124,58 +1124,55 @@
                                 "schema": {
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "properties": {
-                                                    "id": {
-                                                        "type": "integer",
-                                                        "example": 11
-                                                    },
-                                                    "name": {
-                                                        "type": "string",
-                                                        "example": "vel eaque"
-                                                    },
-                                                    "start_date": {
-                                                        "type": "string",
-                                                        "example": "2025-02-09"
-                                                    },
-                                                    "end_date": {
-                                                        "type": "string",
-                                                        "example": "2025-02-14"
-                                                    },
-                                                    "price": {
-                                                        "type": "string",
-                                                        "example": "204.32"
-                                                    },
-                                                    "images": {
-                                                        "type": "array",
-                                                        "items": {
-                                                            "properties": {
-                                                                "id": {
-                                                                    "type": "integer",
-                                                                    "example": 11
-                                                                },
-                                                                "url": {
-                                                                    "type": "string",
-                                                                    "example": "http://travel-api.localhost/storage/public/images/tours/67ade644283f63.07998705.png"
-                                                                }
-                                                            },
-                                                            "type": "object"
-                                                        },
-                                                        "example": [
-                                                            {
-                                                                "id": 11,
-                                                                "url": "http://travel-api.localhost/storage/public/images/tours/67ade644283f63.07998705.png"
-                                                            },
-                                                            {
-                                                                "id": 12,
-                                                                "url": "http://travel-api.localhost/storage/public/images/tours/anotherimage.png"
-                                                            }
-                                                        ]
-                                                    }
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 11
                                                 },
-                                                "type": "object"
-                                            }
+                                                "name": {
+                                                    "type": "string",
+                                                    "example": "vel eaque"
+                                                },
+                                                "start_date": {
+                                                    "type": "string",
+                                                    "example": "2025-02-09"
+                                                },
+                                                "end_date": {
+                                                    "type": "string",
+                                                    "example": "2025-02-14"
+                                                },
+                                                "price": {
+                                                    "type": "string",
+                                                    "example": "204.32"
+                                                },
+                                                "images": {
+                                                    "type": "array",
+                                                    "items": {
+                                                        "properties": {
+                                                            "id": {
+                                                                "type": "integer",
+                                                                "example": 11
+                                                            },
+                                                            "url": {
+                                                                "type": "string",
+                                                                "example": "http://travel-api.localhost/storage/public/images/tours/67ade644283f63.07998705.png"
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    },
+                                                    "example": [
+                                                        {
+                                                            "id": 11,
+                                                            "url": "http://travel-api.localhost/storage/public/images/tours/67ade644283f63.07998705.png"
+                                                        },
+                                                        {
+                                                            "id": 12,
+                                                            "url": "http://travel-api.localhost/storage/public/images/tours/anotherimage.png"
+                                                        }
+                                                    ]
+                                                }
+                                            },
+                                            "type": "object"
                                         }
                                     },
                                     "type": "object"
